# wgmqc

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
debian/: service
doc/: configure.md  design.md
src/: bpf_instance.rs  config.rs  daemon.rs  echo.rs  ice.rs  lib.rs  mq_conn.rs  mq_msg.rs  portmap.rs  pubip.rs  raw.rs  skel.rs  stun.rs  util.rs  wg.rs
src/bpf/: vmlinux.h  wgredir.bpf.c
